<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/teal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="134dp"
        android:layout_height="79dp"
        android:text="@string/sign_up_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTopic"
        app:layout_constraintVertical_bias="0.558" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBackButton"
        android:layout_width="104dp"
        android:layout_height="52dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTopic"
        app:layout_constraintVertical_bias="0.911" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userNameEntry"
        android:layout_width="256dp"
        android:layout_height="61dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEntry"
        app:layout_constraintVertical_bias="0.081" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEntry"
        android:layout_width="256dp"
        android:layout_height="61dp"
        android:layout_marginBottom="208dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/enterNumberOfQuestionsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <Spinner
        android:id="@+id/selectNumOfQuestions"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_border"
        app:layout_constraintBottom_toTopOf="@+id/dailyResetTimeSignUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dailyResetTimeSignUpButton"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:text="@string/enterDailyResetTime"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTopic"
        app:layout_constraintVertical_bias="0.071" />

    <Spinner
        android:id="@+id/selectTopic"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginBottom="272dp"
        android:background="@drawable/text_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/topicSelectionText"
        android:layout_width="152dp"
        android:layout_height="69dp"
        android:layout_marginBottom="96dp"
        android:enabled="false"
        android:text="@string/choose_preferred_quiz_topic"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/selectTopic" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterPassword"
        android:layout_width="255dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toTopOf="@+id/enterNumberOfQuestionsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEntry"
        app:layout_constraintVertical_bias="0.279" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/enterNumberOfQuestionsText"
        android:layout_width="207dp"
        android:layout_height="62dp"
        android:layout_marginBottom="340dp"
        android:enabled="false"
        android:text="@string/enter_number_of_questions"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toEndOf="@+id/selectNumOfQuestions" />

</androidx.constraintlayout.widget.ConstraintLayout>