<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/logInUserNameEntry"
        android:layout_width="266dp"
        android:layout_height="76dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/logInPasswordEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/logInPasswordEntry"
        android:layout_width="268dp"
        android:layout_height="72dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/loginToMainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginToMainButton"
        android:layout_width="153dp"
        android:layout_height="87dp"
        android:text="@string/login_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBackButton"
        android:layout_width="166dp"
        android:layout_height="83dp"
        android:text="@string/back"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToMainButton"
        app:layout_constraintVertical_bias="0.496" />


</androidx.constraintlayout.widget.ConstraintLayout>