<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal" >

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/welcomeTextHomeScreen"
        android:layout_width="171dp"
        android:layout_height="84dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="108dp"
        android:background="@drawable/text_border"
        android:text="@string/homeTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/timeRemainingHomeScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:enabled="false"/>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/timeRemainingHomeScreen"
        android:layout_width="345dp"
        android:layout_height="128dp"
        android:background="@drawable/text_border"
        android:text="@string/timeToPlay"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/quickStartButton"
        android:layout_width="202dp"
        android:layout_height="92dp"
        android:layout_marginBottom="180dp"
        android:text="@string/quickStartButtonText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeRemainingHomeScreen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutButton"
        android:layout_width="211dp"
        android:layout_height="93dp"
        android:text="@string/log_out"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quickStartButton"
        app:layout_constraintVertical_bias="0.316" />

</androidx.constraintlayout.widget.ConstraintLayout>