<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".MainScreen">

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:text="@string/readyToPlay"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/startQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        android:enabled="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startQuizButton"
        android:layout_width="131dp"
        android:layout_height="81dp"
        android:layout_marginBottom="48dp"
        android:text="@string/star_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="370dp"
        android:layout_height="320dp"
        android:background="@drawable/text_border"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/startQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"/>

    <Spinner
        android:id="@+id/selectNumOfQuestionsQuizFragment"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginEnd="260dp"
        android:background="@drawable/text_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.437" />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/numberOfQuestionsTextQuizFragment"
        android:layout_width="175dp"
        android:layout_height="54dp"
        android:text="@string/enter_number_of_questions"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/selectNumOfQuestionsQuizFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.474"
        android:enabled="false"/>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/questionTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_type_of_question"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/selectQuestionType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.352"
        android:enabled="false"/>

    <Spinner
        android:id="@+id/selectQuestionType"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:background="@drawable/text_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.437" />

</androidx.constraintlayout.widget.ConstraintLayout>
